--- a/dev/scss/sections/_dining-and-shopping.scss
+++ b/dev/scss/sections/_dining-and-shopping.scss
@@ -1,401 +1,438 @@
-#dining{
-    
-    ul{
+#dining {
 
-        >li{
-            >button{
+    ul {
+
+        >li {
+            >button {
                 width: 100%;
                 margin: 24px 0px;
-                font-variation-settings: "wght" 290;
+                font-variation-settings: "wght"290;
                 font-size: rem-calc(40);
                 border-radius: 20px;
 
-                @include md{
+                @include md {
                     font-size: rem-calc(72);
                     margin: 32px 0px;
                 }
 
-                @include lg{
+                @include lg {
                     padding: 20px 0;
                 }
             }
         }
 
-   
-       display: grid;
-       grid-template-columns: 16px auto 16px;
-       grid-template-areas: 
-       ". title ."
-       ". sub ."
-       ". b1 ."
-       ". b2 ."
-       ". b3 ."
-       ". b4 ."
-       ". b5 .";
 
-       #ds-title{
-           grid-area: title;
-           text-align: center;
-           font-size: rem-calc(40);
-           font-variation-settings: "wght" 600;
-           line-height: .85;
-           color: $darkblue;
-           margin-bottom: 30px;
-           margin-top: 52px;
-
-           @include md{
-            font-size: rem-calc(65);
-           }
-           @include xl{
-               display: list-item;
-           }
-       }
-       #ds-sub1{
-           grid-area: sub;
-           text-align: center;
-           font-size: rem-calc(40);
-           font-variation-settings: "wght" 290;
-           color: $darkblue;
-
-           @include md{
-            font-size: rem-calc(72);
-           }
-           
-       }
-       #ds-button1{
-           grid-area: b1;
-           text-align: center;
-         
-
-                
-    }
-       #ds-button2{
-        grid-area: b2;
-        text-align: center;
-    }
-    #ds-button3{
-        grid-area: b3;
-        text-align: center;
-    }
-    #ds-button4{
-        grid-area: b4;
-        text-align: center;
-    }
-    #ds-button5{
-        grid-area: b5;
-        text-align: center;
-    }
-
-    @include lg{
         display: grid;
-       grid-template-columns: 95px auto 95px;
-       grid-template-areas: 
-       ". title ."
-       ". sub ."
-       ". b1 ."
-       ". b2 ."
-       ". b3 ."
-       ". b4 ."
-       ". b5 .";
+        grid-template-columns: 16px auto 16px;
+        grid-template-areas: ". title ."
+        ". sub ."
+        ". b1 ."
+        ". b2 ."
+        ". b3 ."
+        ". b4 ."
+        ". b5 .";
 
-       #ds-title{
-        grid-area: title;
-    }
-    #ds-sub1{
-        grid-area: sub;
-    }
-    #ds-button1{
-        grid-area: b1;
-    }
-    #ds-button2{
-     grid-area: b2;
- }
- #ds-button3{
-     grid-area: b3;
- }
- #ds-button4{
-     grid-area: b4;
- }
- #ds-button5{
-     grid-area: b5;
- }
-   
-    }
+        #ds-title {
+            grid-area: title;
+            text-align: center;
+            font-size: rem-calc(40);
+            font-variation-settings: "wght"600;
+            line-height: .85;
+            color: $darkblue;
+            margin-bottom: 30px;
+            margin-top: 52px;
 
-    @include xl{
-        display: grid;
-       grid-template-columns: auto 1200px auto;
-       grid-template-areas: 
-       ". title ."
-       ". sub ."
-       ". b1 ."
-       ". b2 ."
-       ". b3 ."
-       ". b4 ."
-       ". b5 .";
+            @include md {
+                font-size: rem-calc(65);
+            }
 
-       #ds-title{
-        grid-area: title;
+            @include xl {
+                display: list-item;
+            }
+        }
+
+        #ds-sub1 {
+            grid-area: sub;
+            text-align: center;
+            font-size: rem-calc(40);
+            font-variation-settings: "wght"290;
+            color: $darkblue;
+
+            @include md {
+                font-size: rem-calc(72);
+            }
+
+        }
+
+        #ds-button1 {
+            grid-area: b1;
+            text-align: center;
+
+
+
+        }
+
+        #ds-button2 {
+            grid-area: b2;
+            text-align: center;
+        }
+
+        #ds-button3 {
+            grid-area: b3;
+            text-align: center;
+        }
+
+        #ds-button4 {
+            grid-area: b4;
+            text-align: center;
+        }
+
+        #ds-button5 {
+            grid-area: b5;
+            text-align: center;
+        }
+
+        @include lg {
+            display: grid;
+            grid-template-columns: 95px auto 95px;
+            grid-template-areas:
+                ". title ."
+                ". sub ."
+                ". b1 ."
+                ". b2 ."
+                ". b3 ."
+                ". b4 ."
+                ". b5 .";
+
+            #ds-title {
+                grid-area: title;
+            }
+
+            #ds-sub1 {
+                grid-area: sub;
+            }
+
+            #ds-button1 {
+                grid-area: b1;
+            }
+
+            #ds-button2 {
+                grid-area: b2;
+            }
+
+            #ds-button3 {
+                grid-area: b3;
+            }
+
+            #ds-button4 {
+                grid-area: b4;
+            }
+
+            #ds-button5 {
+                grid-area: b5;
+            }
+
+        }
+
+        @include xl {
+            display: grid;
+            grid-template-columns: auto 1200px auto;
+            grid-template-areas:
+                ". title ."
+                ". sub ."
+                ". b1 ."
+                ". b2 ."
+                ". b3 ."
+                ". b4 ."
+                ". b5 .";
+
+            #ds-title {
+                grid-area: title;
+            }
+
+            #ds-sub1 {
+                grid-area: sub;
+            }
+
+            #ds-button1 {
+                grid-area: b1;
+            }
+
+            #ds-button2 {
+                grid-area: b2;
+            }
+
+            #ds-button3 {
+                grid-area: b3;
+            }
+
+            #ds-button4 {
+                grid-area: b4;
+            }
+
+            #ds-button5 {
+                grid-area: b5;
+            }
+        }
+
+
+
     }
-    #ds-sub1{
-        grid-area: sub;
-    }
-    #ds-button1{
-        grid-area: b1;
-    }
-    #ds-button2{
-     grid-area: b2;
- }
- #ds-button3{
-     grid-area: b3;
- }
- #ds-button4{
-     grid-area: b4;
- }
- #ds-button5{
-     grid-area: b5;
- }
 }
 
-
-   
-   }
-}
-
-#shopping{
-    #img-outlet{
+#shopping {
+    #img-outlet {
         background-image: url("../img/shopping/shopping1.jpg");
         background-position: top;
         background-size: cover;
         height: 250px;
-        @include md{
+
+        @include md {
             height: 350px;
         }
     }
-    #img-mall{
+
+    #img-mall {
         background-image: url("../img/shopping/shopping2.jpg");
         background-position: center;
         background-size: cover;
         height: 250px;
-        @include md{
+
+        @include md {
             height: 350px;
         }
     }
-    #img-business{
+
+    #img-business {
         background-image: url("../img/local-businesses/business.jpg");
         background-position: center;
         background-size: cover;
         height: 325px;
-        @include md{
+
+        @include md {
             height: 479px;
         }
-        @include md{
+
+        @include md {
             height: 679px;
         }
     }
-ul{
-    li{
-        >div{
-            >aside{
-                display: none;
 
-                @include md{
-                    display: list-item;
+    ul {
+        li {
+            >div {
+                >aside {
+                    display: none;
 
-                    >p{
-                       font-variation-settings: "wght" 400;
-                       text-align: justify;
-                       padding: 0px 16px 16px 16px;
-                       color: $darkblue;
+                    @include md {
+                        display: list-item;
 
-                       line-height: 1.2;
+                        >p {
+                            font-variation-settings: "wght"400;
+                            text-align: justify;
+                            padding: 0px 16px 16px 16px;
+                            color: $darkblue;
+
+                            line-height: 1.2;
+                        }
                     }
                 }
             }
         }
-    }
 
-    display: grid;
-       grid-template-columns: 16px auto 16px;
-       grid-template-areas: 
-       ". sub2 ."
-       ". outlet ."
-       ". mall .";
-       #ds-sub2{
-        grid-area: sub2;
+        display: grid;
+        grid-template-columns: 16px auto 16px;
+        grid-template-areas: ". sub2 ."
+        ". outlet ."
+        ". mall .";
 
-        text-align: center;
-        font-variation-settings: "wght" 300;
-                    font-size: rem-calc(40);
-                    color: $darkblue;
-                    line-height: .8;
+        #ds-sub2 {
+            grid-area: sub2;
 
-        padding-top: 16px;
-    }
-    #ds-outlet{
-        grid-area: outlet;
-
-        >h3{
             text-align: center;
-            font-variation-settings: "wght" 300;
-                        font-size: rem-calc(40);
-                        color: $lightblue;
-                        line-height: .8;
+            font-variation-settings: "wght"300;
+            font-size: rem-calc(40);
+            color: $darkblue;
+            line-height: .8;
 
-                        padding: 32px 0px 16px;
+            padding-top: 16px;
         }
 
-        #img-outlet{
-            margin-bottom: 16px;
+        #ds-outlet {
+            grid-area: outlet;
+
+            >h3 {
+                text-align: center;
+                font-variation-settings: "wght"300;
+                font-size: rem-calc(40);
+                color: $lightblue;
+                line-height: .8;
+
+                padding: 32px 0px 16px;
+            }
+
+            #img-outlet {
+                margin-bottom: 16px;
+            }
+
+
+            .flex-ds-button {
+
+                padding: 0px 16px;
+                display: flex;
+                justify-content: center;
+
+                @include lg {
+                    justify-content: flex-start;
+                }
+
+            }
         }
 
+        #ds-mall {
+            grid-area: mall;
 
-        .flex-ds-button{
+            >h3 {
+                text-align: center;
+                font-variation-settings: "wght"300;
+                font-size: rem-calc(40);
+                color: $lightblue;
+                line-height: .8;
 
-            padding: 0px 16px;
+                padding: 32px 0px 16px;
+            }
+
+            #img-mall {
+                margin-bottom: 16px;
+            }
+
+
+            .flex-ds-button {
+                padding: 0px 16px;
+                display: flex;
+                justify-content: center;
+
+                @include lg {
+                    justify-content: flex-end;
+                }
+
+            }
+        }
+
+        @include md {
+            display: grid;
+            grid-template-columns: 140px auto 140px;
+            grid-template-areas:
+                ". sub2 ."
+                ". outlet ."
+                ". mall .";
+
+            #ds-sub2 {
+                grid-area: sub2;
+            }
+
+            #ds-outlet {
+                grid-area: outlet;
+            }
+
+            #ds-mall {
+                grid-area: mall;
+            }
+        }
+
+        @include lg {
+            #ds-outlet {
+
+                display: grid;
+                grid-template-columns: 50% 40% auto;
+                grid-template-areas:
+                    "title . ."
+                    "image content .";
+
+                #outlet {
+                    grid-area: title;
+                }
+
+                #img-outlet {
+                    grid-area: image;
+                }
+
+                #outlet-content {
+                    grid-area: content;
+
+
+
+                }
+            }
+
+
+            #ds-mall {
+
+                display: grid;
+                grid-template-columns: auto 40% 50%;
+                grid-template-areas:
+                    ". . title"
+                    ". content image";
+
+                #mall {
+                    grid-area: title;
+                }
+
+                #img-mall {
+                    grid-area: image;
+                }
+
+                #mall-content {
+                    grid-area: content;
+                }
+            }
+        }
+
+        @include xl {
+            display: grid;
+            grid-template-columns: auto 1200px auto;
+            grid-template-areas:
+                ". sub2 ."
+                ". outlet ."
+                ". mall .";
+
+            #ds-sub2 {
+                grid-area: sub2;
+            }
+
+            #ds-outlet {
+                grid-area: outlet;
+            }
+
+            #ds-mall {
+                grid-area: mall;
+            }
+
+
+        }
+
+    }
+
+    >article {
+        >h3 {
+
+            text-align: center;
+            font-variation-settings: "wght"300;
+            font-size: rem-calc(60);
+            color: $lightblue;
+            line-height: .8;
+
+            padding: 32px 0px 16px;
+
+        }
+
+        #business-button-flex {
             display: flex;
             justify-content: center;
 
-            @include lg{
-                justify-content: flex-start;
+            >button {
+                margin: 16px 0px 48px 0px;
             }
-          
         }
     }
-    #ds-mall{
-        grid-area: mall;
-
-        >h3{
-            text-align: center;
-            font-variation-settings: "wght" 300;
-                        font-size: rem-calc(40);
-                        color: $lightblue;
-                        line-height: .8;
-
-                        padding: 32px 0px 16px;
-        }
-
-        #img-mall{
-            margin-bottom: 16px;
-        }
-
-
-        .flex-ds-button{
-            padding: 0px 16px;
-            display: flex;
-            justify-content: center;
-
-            @include lg{
-                justify-content: flex-end;
-            }
- 
-        }
-    }
-
-    @include md{
-        display: grid;
-       grid-template-columns: 140px auto 140px;
-       grid-template-areas: 
-       ". sub2 ."
-       ". outlet ."
-       ". mall .";
-    #ds-sub2{
-        grid-area: sub2;
-    }
-    #ds-outlet{
-        grid-area: outlet;
-    }
-    #ds-mall{
-        grid-area: mall;
-    }
-    }
-
-    @include lg{
-        #ds-outlet{
- 
-           display: grid;
-           grid-template-columns: 50% 40% auto;
-           grid-template-areas:
-           "title . ."
-           "image content .";
-          
-           #outlet{
-               grid-area: title;
-           }
-           #img-outlet{
-               grid-area: image;
-           }
-           #outlet-content{
-               grid-area: content;
-
-
-
-           }
-          }
-       
-       
-       #ds-mall{
-  
-           display: grid;
-           grid-template-columns: auto 40% 50%;
-           grid-template-areas:
-           ". . title"
-           ". content image";
-          
-           #mall{
-               grid-area: title;
-           }
-           #img-mall{
-               grid-area: image;
-           }
-           #mall-content{
-               grid-area: content;
-           }
-          }
-    }
-
-    @include xl{
-        display: grid;
-       grid-template-columns: auto 1200px auto;
-       grid-template-areas: 
-       ". sub2 ."
-       ". outlet ."
-       ". mall .";
-       #ds-sub2{
-        grid-area: sub2;
-    }
-    #ds-outlet{
-        grid-area: outlet;
-    }
-    #ds-mall{
-        grid-area: mall;
-    }
-
-
-    }
-
-}
-
->article{
-    >h3{
-
-        text-align: center;
-            font-variation-settings: "wght" 300;
-                        font-size: rem-calc(60);
-                        color: $lightblue;
-                        line-height: .8;
-
-                        padding: 32px 0px 16px;
-
-    }
-
-    #business-button-flex{
-        display: flex;
-        justify-content: center;
-
-        >button{
-            margin: 16px 0px 48px 0px;
-        }
-    }
-}
 }
