--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -361,11 +361,22 @@ ul {
 /* =============
     Typography
 ============= */
-html, body, h1, h2, h3, h4, h5 {
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: "Dosis", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   padding: 0;
   margin: 0;
 }
@@ -375,7 +386,11 @@ p {
   margin: 0;
 }
 
-p, input, button, address, h6 {
+p,
+input,
+button,
+address,
+h6 {
   font-family: "Karla", sans-serif;
 }
 
@@ -401,8 +416,7 @@ button {
   transition: 0.25s;
 }
 button:hover {
-  background-color: #C8F8D6;
-  color: #15344F;
+  background-color: #23AC4A;
 }
 @media (min-width: 768px) {
   button {
@@ -615,6 +629,11 @@ header #header-button > button {
 #footer > ul #footer-phone {
   grid-area: phone;
   padding-top: 16px;
+}
+@media (min-width: 1024px) {
+  #footer > ul #footer-phone {
+    display: flex;
+  }
 }
 #footer > ul #footer-phone > a {
   display: flex;
@@ -1197,12 +1216,12 @@ header #header-button > button {
 }
 @media (min-width: 768px) {
   #regions .region-img-ht {
-    height: 250px;
+    height: 300px;
   }
 }
 @media (min-width: 1024px) {
   #regions .region-img-ht {
-    height: 400px;
+    height: 430px;
   }
 }
 #regions #region1-image {
