--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,11 +1,22 @@
 /* =============
     Typography
 ============= */
-html,body,h1,h2,h3,h4,h5 {
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: 'Dosis', sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     padding: 0;
     margin: 0;
 }
@@ -15,14 +26,16 @@ p {
     margin: 0;
 }
 
-p,input,button,address, h6{
+p,
+input,
+button,
+address,
+h6 {
     font-family: 'Karla', sans-serif;
 }
 
-nav{
+nav {
     font-family: 'Karla', sans-serif;
     font-size: rem-calc(20);
     font-weight: 400;
 }
-
-
