--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -2,10 +2,10 @@
     Buttons
 ============= */
 
-button{
-    border-radius: 10px;
-    background-color: $green;
-    color: $lightblue;
+button {
+	border-radius: 10px;
+	background-color: $green;
+	color: $lightblue;
 	border: none;
 	cursor: pointer;
 	font-size: rem-calc(24);
@@ -13,15 +13,15 @@ button{
 	font-weight: 600;
 	padding: 10px;
 	transition: 0.25s;
+
 	&:hover {
-		background-color: $lightgreen;
-		color: $darkblue;
+		background-color: $green-button;
 
-     
-}
 
-@include md{
-    font-size: rem-calc(24);
-    padding: 10px 40px;
-}
+	}
+
+	@include md {
+		font-size: rem-calc(24);
+		padding: 10px 40px;
+	}
 }
