--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -24,12 +24,6 @@ $black: #000;
 $darkblue: #15344F;
 $lightblue: #B3ECFF;
 $green: #0A7A2A;
+$green-button: #23AC4A;
 $greenblue: #249379;
 $lightgreen: #C8F8D6;
-
-
-
-
-
-
-
