--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -1,45 +1,52 @@
 /* =============
     Footer
 ============= */
-#footer{
-    >ul{
+#footer {
+    >ul {
 
         background-color: $darkblue;
         display: grid;
         grid-template-columns: 40% 60%;
-        grid-template-areas: 
-        "travel phone"
-        "travel socials"
-        "info info";
+        grid-template-areas:
+            "travel phone"
+            "travel socials"
+            "info info";
 
-        #footer-phone{
+        #footer-phone {
 
-           
+
             grid-area: phone;
 
-            
+
 
             padding-top: 16px;
 
-            >a{
+            @include lg {
                 display: flex;
-            align-items: center;
-            @include lg{
-                justify-content: center;
             }
-            
-            text-decoration: none;
 
-                >i{
+
+            >a {
+                display: flex;
+                align-items: center;
+
+                @include lg {
+                    justify-content: center;
+
+                }
+
+                text-decoration: none;
+
+                >i {
                     padding-right: 16px;
                     font-size: rem-calc(50);
                 }
 
-                >h6{
+                >h6 {
 
-                    font-variation-settings: "wght" 400;
-                        font-size: rem-calc(16);
-                        line-height: .9;
+                    font-variation-settings: "wght"400;
+                    font-size: rem-calc(16);
+                    line-height: .9;
 
                 }
 
@@ -50,80 +57,81 @@
             a:visited {
                 color: $lightgreen;
 
-  
+
                 transition: 00.25s;
 
                 &:hover,
                 &:active {
-                    
-                        color: $lightblue;
+
+                    color: $lightblue;
 
 
-                   
+
                 }
             }
-           
+
         }
 
-        #footer-travel{
+        #footer-travel {
             grid-area: travel;
             display: flex;
             align-items: center;
             justify-content: center;
 
-            @include lg{
+            @include lg {
                 justify-content: left;
             }
 
-           
-           >a{
+
+            >a {
 
                 text-decoration: none;
 
-                
 
-                >h6{
-                    font-variation-settings: "wght" 400;
-                        font-size: rem-calc(24);
-                        line-height: .9;
-                        padding: 0px 32px;
+
+                >h6 {
+                    font-variation-settings: "wght"400;
+                    font-size: rem-calc(24);
+                    line-height: .9;
+                    padding: 0px 32px;
                 }
-            
-           } 
+
+            }
 
             a:link,
             a:visited {
                 color: $lightgreen;
 
-  
+
                 transition: 00.25s;
 
                 &:hover,
                 &:active {
-                    
+
 
                     h6 {
                         color: $lightblue;
 
                     }
 
-                   
+
                 }
+            }
         }
-    }
-        #footer-socials{
+
+        #footer-socials {
 
             padding: 20px 0px;
             grid-area: socials;
 
-            #follow-us{
-                font-variation-settings: "wght" 400;
-                        font-size: rem-calc(16);
-                        line-height: .9;
-                        color: $lightgreen;
+            #follow-us {
+                font-variation-settings: "wght"400;
+                font-size: rem-calc(16);
+                line-height: .9;
+                color: $lightgreen;
             }
 
-            #social-media{
+            #social-media {
                 display: flex;
                 justify-content: space-between;
 
@@ -131,22 +139,22 @@
 
                 font-size: rem-calc(50);
 
-                >li{
+                >li {
 
                     a:link,
                     a:visited {
                         color: $white;
-        
-          
+
+
                         transition: 00.25s;
-        
+
                         &:hover,
                         &:active {
-                            
-                                color: $lightblue;
 
-        
-                           
+                            color: $lightblue;
+
+
+
                         }
                     }
 
@@ -154,11 +162,12 @@
             }
         }
 
-        #footer-info{
+        #footer-info {
             grid-area: info;
-            >p{
 
-                font-variation-settings: "wght" 400;
+            >p {
+
+                font-variation-settings: "wght"400;
                 font-size: rem-calc(12);
                 line-height: 1.2;
                 color: $lightblue;
@@ -170,31 +179,31 @@
             }
         }
 
-        @include md{
+        @include md {
 
-           
+
             grid-template-columns: 40% 40% auto;
-            grid-template-areas: 
-            "travel phone ."
-            "travel socials ."
-            "info info info";
+            grid-template-areas:
+                "travel phone ."
+                "travel socials ."
+                "info info info";
         }
 
-        @include lg{
+        @include lg {
             display: grid;
-        grid-template-columns: auto 300px 300px 300px auto;
-        grid-template-areas: 
-        ". phone travel socials ."
-        "info info info info info";
+            grid-template-columns: auto 300px 300px 300px auto;
+            grid-template-areas:
+                ". phone travel socials ."
+                "info info info info info";
 
         }
 
-        @include xl{
+        @include xl {
             display: grid;
-        grid-template-columns: auto 400px 400px 400px auto;
-        grid-template-areas: 
-        ". phone travel socials ."
-        "info info info info info";
+            grid-template-columns: auto 400px 400px 400px auto;
+            grid-template-areas:
+                ". phone travel socials ."
+                "info info info info info";
 
         }
     }
