--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -2,209 +2,130 @@
     Footer
 ============= */
 #footer {
-    >ul {
-
-        background-color: $darkblue;
-        display: grid;
-        grid-template-columns: 40% 60%;
-        grid-template-areas:
-            "travel phone"
+	>ul {
+		background-color: $darkblue;
+		display: grid;
+		grid-template-areas: "travel phone"
             "travel socials"
             "info info";
-
-        #footer-phone {
-
-
-            grid-area: phone;
-
-
-
-            padding-top: 16px;
-
-            @include lg {
-                display: flex;
-            }
-
-
-            >a {
-                display: flex;
-                align-items: center;
-
-                @include lg {
-                    justify-content: center;
-
-                }
-
-                text-decoration: none;
-
-                >i {
-                    padding-right: 16px;
-                    font-size: rem-calc(50);
-                }
-
-                >h6 {
-
-                    font-variation-settings: "wght"400;
-                    font-size: rem-calc(16);
-                    line-height: .9;
-
-                }
-
-
-            }
-
-            a:link,
+		grid-template-columns: 40% 60%;
+		#footer-phone {
+			grid-area: phone;
+			padding-top: 16px;
+			@include lg {
+				display: flex;
+			}
+			>a {
+				align-items: center;
+				display: flex;
+				text-decoration: none;
+				@include lg {
+					justify-content: center;
+				}
+				>i {
+					font-size: rem-calc(50);
+					padding-right: 16px;
+				}
+				>h6 {
+					font-size: rem-calc(16);
+					font-variation-settings: "wght"400;
+					line-height: .9;
+				}
+			}
+			a:link,
             a:visited {
-                color: $lightgreen;
-
-
-                transition: 00.25s;
-
-                &:hover,
+				color: $lightgreen;
+				transition: 00.25s;
+				&:hover,
                 &:active {
-
-                    color: $lightblue;
-
-
-
-                }
-            }
-
-        }
-
-        #footer-travel {
-            grid-area: travel;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            @include lg {
-                justify-content: left;
-            }
-
-
-            >a {
-
-                text-decoration: none;
-
-
-
-                >h6 {
-                    font-variation-settings: "wght"400;
-                    font-size: rem-calc(24);
-                    line-height: .9;
-                    padding: 0px 32px;
-                }
-
-            }
-
-            a:link,
+					color: $lightblue;
+				}
+			}
+		}
+		#footer-travel {
+			align-items: center;
+			display: flex;
+			grid-area: travel;
+			justify-content: center;
+			@include lg {
+				justify-content: left;
+			}
+			>a {
+				text-decoration: none;
+				>h6 {
+					font-size: rem-calc(24);
+					font-variation-settings: "wght"400;
+					line-height: .9;
+					padding: 0px 32px;
+				}
+			}
+			a:link,
             a:visited {
-                color: $lightgreen;
-
-
-                transition: 00.25s;
-
-                &:hover,
+				color: $lightgreen;
+				transition: 00.25s;
+				&:hover,
                 &:active {
-
-
-                    h6 {
-                        color: $lightblue;
-
-                    }
-
-
-                }
-            }
-        }
-
-        #footer-socials {
-
-            padding: 20px 0px;
-            grid-area: socials;
-
-            #follow-us {
-                font-variation-settings: "wght"400;
-                font-size: rem-calc(16);
-                line-height: .9;
-                color: $lightgreen;
-            }
-
-            #social-media {
-                display: flex;
-                justify-content: space-between;
-
-                padding-right: 24px;
-
-                font-size: rem-calc(50);
-
-                >li {
-
-                    a:link,
+					h6 {
+						color: $lightblue;
+					}
+				}
+			}
+		}
+		#footer-socials {
+			grid-area: socials;
+			padding: 20px 0px;
+			#follow-us {
+				color: $lightgreen;
+				font-size: rem-calc(16);
+				font-variation-settings: "wght"400;
+				line-height: .9;
+			}
+			#social-media {
+				display: flex;
+				font-size: rem-calc(50);
+				justify-content: space-between;
+				padding-right: 24px;
+				>li {
+					a:link,
                     a:visited {
-                        color: $white;
-
-
-                        transition: 00.25s;
-
-                        &:hover,
+						color: $white;
+						transition: 00.25s;
+						&:hover,
                         &:active {
-
-                            color: $lightblue;
-
-
-
-                        }
-                    }
-
-                }
-            }
-        }
-
-        #footer-info {
-            grid-area: info;
-
-            >p {
-
-                font-variation-settings: "wght"400;
-                font-size: rem-calc(12);
-                line-height: 1.2;
-                color: $lightblue;
-
-                padding: 0px 16px 32px;
-
-                text-align: center;
-
-            }
-        }
-
-        @include md {
-
-
-            grid-template-columns: 40% 40% auto;
-            grid-template-areas:
-                "travel phone ."
+							color: $lightblue;
+						}
+					}
+				}
+			}
+		}
+		#footer-info {
+			grid-area: info;
+			>p {
+				color: $lightblue;
+				font-size: rem-calc(12);
+				font-variation-settings: "wght"400;
+				line-height: 1.2;
+				padding: 0px 16px 32px;
+				text-align: center;
+			}
+		}
+		@include md {
+			grid-template-areas: "travel phone ."
                 "travel socials ."
                 "info info info";
-        }
-
-        @include lg {
-            display: grid;
-            grid-template-columns: auto 300px 300px 300px auto;
-            grid-template-areas:
-                ". phone travel socials ."
+			grid-template-columns: 40% 40% auto;
+		}
+		@include lg {
+			display: grid;
+			grid-template-areas: ". phone travel socials ."
                 "info info info info info";
-
-        }
-
-        @include xl {
-            display: grid;
-            grid-template-columns: auto 400px 400px 400px auto;
-            grid-template-areas:
-                ". phone travel socials ."
+			grid-template-columns: auto 300px 300px 300px auto;
+		}
+		@include xl {
+			display: grid;
+			grid-template-areas: ". phone travel socials ."
                 "info info info info info";
-
-        }
-    }
+			grid-template-columns: auto 400px 400px 400px auto;
+		}
+	}
 }
