--- a/dev/scss/sections/_places-to-visit.scss
+++ b/dev/scss/sections/_places-to-visit.scss
@@ -250,6 +250,7 @@
                         font-size: rem-calc(16);
                         color: $darkblue;
                         line-height: 1.5;
+                        padding-left: 16px;
                     }
                 }
 
@@ -284,6 +285,7 @@
                         font-size: rem-calc(16);
                         color: $darkblue;
                         line-height: 1.5;
+                        padding-left: 16px;
                     }
                 }
 
@@ -316,6 +318,7 @@
                         font-size: rem-calc(16);
                         color: $darkblue;
                         line-height: 1.5;
+                        padding-left: 16px;
                     }
                 }
 
@@ -345,6 +348,8 @@
                         display: flex;
                         margin-top: auto;
                         text-align: justify;
+                        padding-left: 0px;
+                        margin-bottom: -7px;
 
                     }
                 }
@@ -369,6 +374,8 @@
                         display: flex;
                         margin-top: auto;
                         text-align: justify;
+                        padding-left: 0px;
+                        margin-bottom: -7px;
                     }
                 }
 
@@ -392,6 +399,8 @@
                         display: flex;
                         margin-top: auto;
                         text-align: justify;
+                        padding-left: 0px;
+                        margin-bottom: -7px;
                     }
                 }
 
